application/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
  labels: istio.io/rev: default
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo
spec:
  parentRefs:
  - name: bookinfo-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /locust
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: loadgen
      port: 8089
  - matches:
    - path:
        type: Exact
        value: /stats/reset
    backendRefs:
    - name: blackhole
      port: 1234
  - matches:
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: PathPrefix
        value: /stats
    - path:
        type: PathPrefix
        value: /exceptions
    - path:
        type: PathPrefix
        value: /tasks
    backendRefs:
    - name: loadgen
      port: 8089
  - matches:
    - path:
        type: Exact
        value: /productpage
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: Exact
        value: /login
    - path:
        type: Exact
        value: /logout
    - path:
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - name: productpage
      port: 9080
