application/loadgen.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadgen
  labels:
    app: loadgen
    service: loadgen
spec:
  ports:
  - port: 8089
    name: http
  selector:
    app: loadgen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen
  labels:
    app: loadgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgen
  template:
    metadata:
      labels:
        app: loadgen
    spec:
      containers:
      - name: loadgen
        image: therealmitchconnors/bookinfo-load-test:latest
        imagePullPolicy: Always
        args: ["-h","http://bookinfo-gateway-istio","-u","50","-r","1"]
        ports:
        - containerPort: 9080
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: loadgen
spec:
  action: DENY
  rules: 
  - from:
    - source:
        principals: ["cluster.local/ns/ambient/sa/bookinfo-gateway-istio"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/stats/reset*", "/swarm*", "/stop*"]
        ports: ["8089"]
    - operation:
        methods: ["POST", "PUT", "PATCH", "DELETE"]
        ports: ["8089"]
